[tool.poetry]
name = "yase"
version = "0.1.0"
description = "A library for depth estimation using Monodepth2 and FastDepth models."
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "yase", from = "src" }]
build = "src"
include = [
    "src/yase/weights/**"
]

[tool.poetry.dependencies]
python = "^3.8"
torch = "^2.0.0"
torchvision = "^0.15.0"
Pillow = "^9.2.0"
matplotlib = "^3.5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

